--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^5.22.0",
+    "better-auth": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "prisma": "^7.2.0"
+    "prisma": "^5.22.0"
   }
 }
