--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,9 @@
   "type": "module",
   "dependencies": {
     "@clack/prompts": "^0.11.0",
+    "@langchain/core": "^1.1.8",
+    "@langchain/google-genai": "^2.1.3",
+    "@langchain/langgraph": "^1.0.7",
     "@prisma/client": "^5.22.0",
     "ai": "^6.0.3",
     "better-auth": "^1.4.7",
