--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@langchain/core": "^1.1.8",
     "@langchain/google-genai": "^2.1.3",
     "@langchain/langgraph": "^1.0.7",
+    "@langchain/openai": "^1.2.0",
     "@prisma/client": "^5.22.0",
     "ai": "^6.0.3",
     "better-auth": "^1.4.7",
